--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
 version: 2.1
 
 jobs:
   build:
-    working_directory: ~/my-app
     docker:
-      - image: circleci/node:10
+      - image: circleci/node:14.17.0
+    working_directory: ~/app
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - npm-cache-{{ checksum "package-lock.json" }}
       - run: npm install
-      - save_cache:
-          key: npm-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - run: npm test
+      - run: npm run test
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
